# cloud

./: Cargo.toml  docker-compose.yaml
.cargo/: config.toml
crates/cloudadm/: Cargo.toml
crates/cloudadm/src/: main.rs
crates/cloudadmd/: Cargo.toml
crates/cloudadmd/src/: lib.rs
crates/node-provider/: Cargo.toml
crates/node-provider/examples/: zone_read_and_convert.rs
crates/node-provider/src/: lib.rs  main.rs
crates/nodelet/: Cargo.toml
crates/nodelet/examples/: network_read_and_convert.rs  zone_read_and_convert.rs
crates/nodelet/src/: lib.rs  main.rs
examples/: write-sample-deployment.rs
sample_data/: empty-deployment.yaml  network.kdl  network.yaml  public-network.kdl  public-network.yaml  zone-postgres.kdl  zone-postgres.yaml  zone.kdl  zone.yaml
src/: lib.rs
xtask/: Cargo.toml
