[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bonsaidb = { version = "0.5.0" }
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
miette = { version = "7.2.0", features = ["fancy", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "tracing", "env-filter"] }
cloud = { version = "*", path = "." }

[package]
name = "cloud"
version.workspace = true
edition.workspace = true

[dependencies]
arc-bytes = "0.3.5"
bonsaidb.workspace = true
serde.workspace = true
