[package]
name = "cloudadmd"
version.workspace = true
edition.workspace = true

[dependencies]
bonsaidb = { workspace = true, features = ["server", "server-full", "compression", "instrument"] }
clap.workspace = true
config.workspace = true
miette.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cloud.workspace = true