[package]
name = "node-provider"
version.workspace = true
edition.workspace = true

[dependencies]
bonsaidb = { workspace = true, features = ["client-full", "client", "local"] }
clap.workspace = true
miette = {workspace = true, features = ["fancy"]}
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
