[package]
name = "nodelet"
version.workspace = true
edition.workspace = true

[dependencies]
bonsaidb = { workspace = true, features = ["client-full", "client", "local", "password-hashing", "token-authentication"] }
clap.workspace = true
miette = {workspace = true, features = ["fancy"]}
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml.workspace = true
knuffel = "3.2.0"
cbor = "0.4.1"
deadpool-lapin = { version = "0.12.0", features = ["serde"] }
gethostname = "0.4.3"
futures = "0.3.30"
cloud.workspace = true
serde_json = "1.0.117"
